made some changes, realized I didn't input my FAQ's correctly

--- a/jquery_faq.html
+++ b/jquery_faq.html
@@ -6,6 +6,7 @@
         .invisible {
             visibility: hidden;
         }
+
         .highlight {
             background-color: yellow;
             color: black;
@@ -14,36 +15,61 @@
 </head>
 <body>
 <dl>
-    <dt>Fact 1</dt>
-    <dd>The Great Smoky Mountains National Park (pictured above) is the most visited national park in the United States – attracting more than 11 million visitors in 2018.</dd>
+    <dt>Who is the director of the National Park Service?</dt>
+    <dd>Margaret Everson, Counselor to the Secretary, is exercising the delegated authority of the Director of the
+        National Park Service.
+    </dd>
 
-    <dt>Fact 2</dt>
-    <dd>An estimated 5.9 million people visit the Grand Canyon each year, making it the second most visited national park</dd>
+    <dt>What government agency oversees the National Park Service?
+    </dt>
+    <dd>The National Park Service is a bureau of the Department of the Interior. Directly overseeing its operation is the department's Assistant Secretary for Fish, Wildlife and Parks.
 
-    <dt>Fact 3</dt>
-    <dd>Yellowstone was the first national park in the United States, created in 1872 and signed into law by President Ulysses S. Grant.</dd>
+    </dd>
 
-    <dt>Fact 4</dt>
-    <dd>Yellowstone National Park is home to more than 500 active geysers (more than half the world’s geysers). </dd>
+    <dt>How many employees are in the National Park Service?
+    </dt>
+    <dd>Permanent, temporary, and seasonal employees: Approximately 20,000
+        Volunteers: More than 279,000 in 2019</dd>
 
-    <dt>Fact 5</dt>
-    <dd>At 13.2 million acres, Alaska’s Wrangell-St. Elias National Park & Preserve is the largest national park in the United States.</dd>
+    <dt>How old is the National Park System?
+    </dt>
+    <dd>The National Park Service was created by an act signed by President Woodrow Wilson on August 25, 1916. Yellowstone National Park was established by an act signed by President Ulysses S. Grant on March 1, 1872, as the nation's first national park. View the National Park System timeline.
 
-    <dt>Fact 6</dt>
-    <dd>The smallest national park, if we’re talking natural, is Hot Springs National Park in Arkansas coming in at about 5,500 acres.</dd>
+    </dd>
+    <dt>What is the origin of the National Park Service arrowhead?
+    </dt>
+    <dd>The arrowhead was authorized as the official National Park Service emblem by the Secretary of the Interior on July 20, 1951. The components of the arrowhead may have been inspired by key attributes of the National Park System, with the sequoia tree and bison representing vegetation and wildlife, the mountains and water representing scenic and recreational values, and the arrowhead itself representing historical and archeological values. Read more about the history of the arrowhead and other elements of NPS visual design.
+    </dd>
 
-    <dt>Fact 7</dt>
-    <dd>California has the most national parks with nine, followed by Alaska with eight. </dd>
+    <dt>How many areas are in the National Park System?
+    </dt>
+    <dd>The system includes 419 areas covering more than 85 million acres in every state, the District of Columbia, American Samoa, Guam, Puerto Rico, and the Virgin Islands. These areas include national parks, monuments, battlefields, military parks, historical parks, historic sites, lakeshores, seashores, recreation areas, scenic rivers and trails, and the White House. Learn more about national park designations. See the complete list of National Park Service units and related areas by type and number.
 
-    <dt>Fact 8</dt>
-    <dd>Death Valley National Park has the distinction of being the hottest, driest and lowest place in the United States.</dd>
+    </dd>
 
-    <dt>Fact 9</dt>
-    <dd>The southwest can be sweltering in July and August, but at an average elevation of 8,500 feet Utah’s Bryce Canyon National Park stays relatively cool with temps in the 80’s during the day and 50’s in the evenings.</dd>
+    <dt>What is the largest national park site? Smallest?
+    </dt>
+    <dd>Largest: Wrangell-St. Elias National Park and Preserve, AK, at 13.2 million acres
+        Smallest: Thaddeus Kosciuszko National Memorial, PA, at 0.02 acres</dd>
+    <dt>How many people visit the national parks?
+    </dt>
+    <dd>Total recreation visitors to the national parks in 2019: 327,516,619.
+    </dd>
 
-    <dt>Fact 10</dt>
-    <dd>For breathtaking landscapes and great weather, it’s hard to beat Glacier National Park in Montana.</dd>
+    <dt>What is the most-visited national park?
+    </dt>
+    <dd>View a list of the most-visited sites in the National Park Service.
+
+    </dd>
+
+    <dt>What is the National Park Service budget?
+    </dt>
+    <dd>Fiscal Year (FY) 2014 Enacted: $2.98 billion
+        FY 2015 Enacted: $2.615 billion
+        FY 2016 Enacted:$2.851 billion
+        FY 2017 Enacted: $2.932 billion</dd>
 </dl>
+
 
 <script src="js/jquery.js"></script>
 <script>
