added a link that toggles on and off the information from FAQ's and added list elements to be modified in the next exercise

--- a/jquery_faq.html
+++ b/jquery_faq.html
@@ -14,6 +14,7 @@
     </style>
 </head>
 <body>
+<a href="#">Answers</a>
 <dl>
     <dt>Who is the director of the National Park Service?</dt>
     <dd>Margaret Everson, Counselor to the Secretary, is exercising the delegated authority of the Director of the
@@ -22,35 +23,48 @@
 
     <dt>What government agency oversees the National Park Service?
     </dt>
-    <dd>The National Park Service is a bureau of the Department of the Interior. Directly overseeing its operation is the department's Assistant Secretary for Fish, Wildlife and Parks.
+    <dd>The National Park Service is a bureau of the Department of the Interior. Directly overseeing its operation is
+        the department's Assistant Secretary for Fish, Wildlife and Parks.
 
     </dd>
 
     <dt>How many employees are in the National Park Service?
     </dt>
     <dd>Permanent, temporary, and seasonal employees: Approximately 20,000
-        Volunteers: More than 279,000 in 2019</dd>
+        Volunteers: More than 279,000 in 2019
+    </dd>
 
     <dt>How old is the National Park System?
     </dt>
-    <dd>The National Park Service was created by an act signed by President Woodrow Wilson on August 25, 1916. Yellowstone National Park was established by an act signed by President Ulysses S. Grant on March 1, 1872, as the nation's first national park. View the National Park System timeline.
+    <dd>The National Park Service was created by an act signed by President Woodrow Wilson on August 25, 1916.
+        Yellowstone National Park was established by an act signed by President Ulysses S. Grant on March 1, 1872, as
+        the nation's first national park. View the National Park System timeline.
 
     </dd>
     <dt>What is the origin of the National Park Service arrowhead?
     </dt>
-    <dd>The arrowhead was authorized as the official National Park Service emblem by the Secretary of the Interior on July 20, 1951. The components of the arrowhead may have been inspired by key attributes of the National Park System, with the sequoia tree and bison representing vegetation and wildlife, the mountains and water representing scenic and recreational values, and the arrowhead itself representing historical and archeological values. Read more about the history of the arrowhead and other elements of NPS visual design.
+    <dd>The arrowhead was authorized as the official National Park Service emblem by the Secretary of the Interior on
+        July 20, 1951. The components of the arrowhead may have been inspired by key attributes of the National Park
+        System, with the sequoia tree and bison representing vegetation and wildlife, the mountains and water
+        representing scenic and recreational values, and the arrowhead itself representing historical and archeological
+        values. Read more about the history of the arrowhead and other elements of NPS visual design.
     </dd>
 
     <dt>How many areas are in the National Park System?
     </dt>
-    <dd>The system includes 419 areas covering more than 85 million acres in every state, the District of Columbia, American Samoa, Guam, Puerto Rico, and the Virgin Islands. These areas include national parks, monuments, battlefields, military parks, historical parks, historic sites, lakeshores, seashores, recreation areas, scenic rivers and trails, and the White House. Learn more about national park designations. See the complete list of National Park Service units and related areas by type and number.
+    <dd>The system includes 419 areas covering more than 85 million acres in every state, the District of Columbia,
+        American Samoa, Guam, Puerto Rico, and the Virgin Islands. These areas include national parks, monuments,
+        battlefields, military parks, historical parks, historic sites, lakeshores, seashores, recreation areas, scenic
+        rivers and trails, and the White House. Learn more about national park designations. See the complete list of
+        National Park Service units and related areas by type and number.
 
     </dd>
 
     <dt>What is the largest national park site? Smallest?
     </dt>
     <dd>Largest: Wrangell-St. Elias National Park and Preserve, AK, at 13.2 million acres
-        Smallest: Thaddeus Kosciuszko National Memorial, PA, at 0.02 acres</dd>
+        Smallest: Thaddeus Kosciuszko National Memorial, PA, at 0.02 acres
+    </dd>
     <dt>How many people visit the national parks?
     </dt>
     <dd>Total recreation visitors to the national parks in 2019: 327,516,619.
@@ -67,16 +81,52 @@
     <dd>Fiscal Year (FY) 2014 Enacted: $2.98 billion
         FY 2015 Enacted: $2.615 billion
         FY 2016 Enacted:$2.851 billion
-        FY 2017 Enacted: $2.932 billion</dd>
+        FY 2017 Enacted: $2.932 billion
+    </dd>
 </dl>
 
+<h3>Great Smoky Mountains National Park</h3>
+<ul>
+    <li>Great Smoky Mountains National Park was established in 1934.</li>
+    <li>Great Smoky Mountains National Park runs through Tennessee and North Carolina.
+    </li>
+    <li>The Park was officially dedicated by President Franklin Delano Roosevelt in 1940.
+    </li>
+    <li>Great Smoky Mountains National Park is the most visited national park in America. There have been more than 1/2 billion visitors since 1934.
+    </li>
+
+</ul>
+
+<h3>Bryce Canyon National Park</h3>
+<ul>
+    <li>Bryce Canyon is not technically a canyon. It is a series of about a dozen natural amphitheaters, eroded into an escarpment of the Paunsaugunt Plateau.
+    </li>
+    <li>The “hoodoo” formations that Bryce Canyon is famous for were formed chiefly by the repeated freezing and thawing of water.
+    </li>
+    <li>The lowest elevation found in Bryce Canyon is 6,620 feet at Yellow Creek
+    </li>
+    <li>The highest elevation found in Bryce Canyon is 9,115 feet at Rainbow Point
+    </li>
+</ul>
+
+<h3>Carslbad Caverns National Park</h3>
+<ul>
+    <li>At present there are 117 known caves in the park, and more will be discovered. The cave known as Carlsbad Cavern is only one of these.
+    </li>
+    <li>The Big Room in Carlsbad Caverns, at 8.2 acres, is the largest accessible cave chamber in North America.
+    </li>
+    <li>Although Carlsbad Caverns is rightly known for its famous caves, there are also more than 50 miles of aboveground trails that explore the desert landscape.
+    </li>
+    <li>Lechuguilla Cave, made famous on the Planet Earth series, is located in Carlsbad Caverns National Park. It cannot be accessed by the public, and entry is allowed only for special research purposes.
+    </li>
+</ul>
 
 <script src="js/jquery.js"></script>
 <script>
     "use strict";
 
-    $('dd').click(function () {
-        $(this).toggleClass('invisible')
+    $('a').click(function () {
+        $('dd').toggleClass('invisible')
     })
     $('dt').click(function () {
         $(this).toggleClass('highlight')
