complete events exercises, refactored how the ul list items slideToggle() operates

--- a/jquery_faq.html
+++ b/jquery_faq.html
@@ -121,29 +121,43 @@
     </li>
 </ul>
 
-<div></div>
-<div></div>
-<div></div>
+<div>
+    <h1><span>[x]  </span>Would you like to sign up for our newsletter?</h1>
+</div>
+<h2>Would you like to register?</h2>
 
 <button id="btn" type="button">Click Me</button>
 <script src="js/jquery.js"></script>
 <script>
     "use strict";
 
+    $('document').ready(function() {
+        $('h2').hide().delay(8000).fadeIn(1000)
+    })
     $('a').click(function () {
         $('dd').toggleClass('invisible')
     })
+
     $('dt').click(function () {
         $(this).toggleClass('highlight')
     })
+
     $('#btn').click(function () {
         $('ul li:nth-child(4)').toggleClass('highlight')
+        $('h2').fadeToggle(1000)
     })
-    $('h3').click(function () {
-        $('li').css('font-weight', 'bold')
+
+    $('ul').hide()
+    $('h3').click(function() {
+        $('ul').slideToggle()
     })
+
     $('li').click(function () {
         $('li:nth-child(1)').css('color', 'blue')
+    })
+
+    $('span').click(function () {
+        $('div h1').toggleClass('invisible')
     })
 </script>
 </body>
