complete traversing exercise, while refactoring accidently removed the bold applied to li elements

--- a/jquery_faq.html
+++ b/jquery_faq.html
@@ -150,6 +150,7 @@
     $('ul').hide()
     $('h3').click(function() {
         $('ul').slideToggle()
+        $('li').css('font-weight', 'bold')
     })
 
     $('li').click(function () {
