--- a/ajax-store.html
+++ b/ajax-store.html
@@ -2,36 +2,104 @@
 <html>
 <head>
     <title>Online Store</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+          integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <style>
+        .carousel-item p {
+            font-size: 13px;
+        }
+    </style>
 </head>
 <body>
 
-<h1>My Tool Store</h1>
+<!--Start of Jumbotron-->
+<div class="jumbotron jumbotron-fluid">
+    <div class="container-fluid">
+        <div class="">
+            <h1 class="text-center">Mach Modular</h1>
+            <p class="text-center">If you build it, frames will come...</p>
+        </div>
+    </div>
+</div>
+<!--End of Jumbotron-->
 
-<table id="products">
+<!--Start of Carousel-->
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+
+    <div class="carousel-inner h-20">
+        <div class="carousel-item active">
+            <img src="" class="d-block w-100" alt="...">
+            <p class="text-center">"The build-a-bear of the PC world!"<br>-Jake, from Statefarm</p>
+        </div>
+        <div class="carousel-item">
+            <img src="" class="d-block w-100" alt="...">
+            <p class="text-center">"Two thumbs up!"<br>-Robert Egbert</p>
+        </div>
+        <div class="carousel-item">
+            <img src="" class="d-block w-100" alt="...">
+        </div>
+    </div>
+    <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active bg-black"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon text-dark" aria-hidden="true"></span>
+        <span class="sr-only text-dark">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
+</div>
+<!--End of Carousel-->
+
+<!--Table contents-->
+<table id="products" class="table table-bordered table-dark">
     <thead>
-        <tr>
-            <th>Title</th>
-            <th>Quantity</th>
-            <th>Price</th>
-            <th>Categories</th>
-        </tr>
+    <tr>
+        <th scope="col">Title</th>
+        <th scope="col">Quantity</th>
+        <th scope="col">Price</th>
+        <th scope="col">Categories</th>
+    </tr>
     </thead>
     <tbody id="insertProducts"></tbody>
 </table>
+<!--Table Contents-->
+<button id="refresh" type="button">Refresh</button>
 
-<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
-
+<script src="https://code.jquery.com/jquery-2.2.4.min.js"
+        integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 <script>
-(function() {
-    "use strict";
-    // TODO: Create an AJAX GET request for the file under data/inventory.json
+    $().ready(function () {
+        "use strict";
+        function getInventory() {
+            $.ajax("data/inventory.json").done(function (data) {
+                var innerHTML = '<br>';
+                data.forEach(function (object) {
+                    innerHTML += '<tr><td>' + object['title'] + '</td><td>'
+                        + object['quantity'] + '</td><td>$'
+                        + object['price'] + '</td><td>'
+                        + object['categories'] + '</td></tr>'
+                    $('#insertProducts').html(innerHTML);
+                })
+            })
+        }
+        getInventory()
 
-    // TODO: Take the data from inventory.json and append it to the products table
-    //       HINT: Your data should come back as a JSON object; use console.log() to inspect
-    //             its contents and fields
-    //       HINT: You will want to target #insertProducts for your new HTML elements
-})();
+        $("#refresh").click(function() {
+            getInventory()
+        })
+    });
 </script>
-
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+        crossorigin="anonymous"></script>
 </body>
 </html>
+
