--- a/weather_map.html
+++ b/weather_map.html
@@ -5,58 +5,136 @@
     <title>Weather Map</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
           integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link href='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css' rel='stylesheet' />
+    <link href='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css' rel='stylesheet'/>
 
     <style>
 
     </style>
 </head>
 <body>
-<div class="container" ><p class="heading-1" id="location"></p></div>
+<div class="container"><p class="heading-1" id="location"></p></div>
+<!--<input id="zipcode" type="text">-->
+<!--<button id="submit" type="button">Search</button>-->
 <div class="row" id="forecastDays"></div>
+
 <div class="container-fluid">
-<div class="m-auto" id='map' style='width: 800px; height:400px'></div>
+    <div class="m-auto" id='map' style='width: 800px; height:400px'>
+        <div id="coordinates"></div>
+    </div>
 </div>
 
 <script src="https://code.jquery.com/jquery-2.2.4.min.js"
         integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 <script src="js/keys.js"></script>
-<script>
-    $().ready(function () {
-
-            $.get("http://api.openweathermap.org/data/2.5/forecast?APPID=" + OPEN_WEATHER_APPID + "&q=Pipe+Creek,+US", {
-                APPID: OPEN_WEATHER_APPID,
-                lat: 29.7231,
-                lon: -98.9347,
-                units: "imperial"
-            }).done(function (data) {
-                console.log(data)
-                $('#location').html(data.city['name'])
-
-                for(var i = 0; i < data.list.length; i++){
-                    if (data.list[i].dt_txt.includes('12:00:00')){
-                        $('#forecastDays').append(
-                            '<div class="col" ><img src="http://openweathermap.org/img/w/' + data.list[i].weather[0].icon + '.png" alt="weatherIMG"><p>' + data.list[i].weather[0].description  +'</p>' +
-                            '<p>'  + 'Humidity: ' + data.list[i].main.humidity  +'%</p>' +
-                            '<p>'  + 'Wind Speed: ' + data.list[i].wind.speed +' MPH</p>' +
-                            '<p>' + 'Temp: ' + data.list[i].main.temp  +'°</p>' +
-                            '<p>' + 'Low: ' + data.list[i].main.temp_min + '°</p>' +
-                            '<p>' + 'High: ' + data.list[i].main.temp_max + '°</p></div>'
-                        )
-                    }
-                }
-            });
-    });
-</script>
 <script src='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.js'></script>
+<script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.5.1/mapbox-gl-geocoder.min.js"></script>
 <script>
-    mapboxgl.accessToken = 'pk.eyJ1IjoiY2FsZWJ3aGVlbGVyIiwiYSI6ImNrZWN4MHF5eDAwMTAycm16a3psZm4yeGYifQ.TPxlV9LK002eq2AvbiB1sg';
+    var longitude = -98.9347;
+    var latitude = 29.7231;
+
+    mapboxgl.accessToken = MAPBOX_TOKEN;
+    var coordinates = document.getElementById('coordinates');
     var map = new mapboxgl.Map({
         container: 'map',
         style: 'mapbox://styles/mapbox/streets-v11',
-        center: [-98.9347, 29.7231],
+        center: [longitude, latitude],
         zoom: 10.8,
+
     });
+
+    var marker = new mapboxgl.Marker({
+        draggable: true
+    })
+        .setLngLat([longitude, latitude])
+        .addTo(map);
+
+    var geocoder = new MapboxGeocoder({
+        accessToken: mapboxgl.accessToken,
+        marker: {
+            draggable: true
+        },
+        mapboxgl: mapboxgl
+    });
+
+    map.addControl(geocoder);
+        // new MapboxGeocoder({
+        //     accessToken: mapboxgl.accessToken,
+        //     mapboxgl: mapboxgl,
+        //     marker: {
+        //         anchor: 'center',
+        //         draggable: true
+        //     }
+        //
+        // }),
+
+    // );
+    // MapboxGeocoder.marker.setLngLat(longitude, latitude)
+
+
+    var forecastDays = ''
+    var renderForecast = function (data) {
+        if (forecastDays === '') {
+            for (var i = 0; i < data.list.length; i++) {
+                if (data.list[i].dt_txt.includes('12:00:00')) {
+                    forecastDays += '<div class="col" ><img src="http://openweathermap.org/img/w/' + data.list[i].weather[0].icon + '.png" alt="weatherIMG"><p>' + data.list[i].weather[0].description + '</p>' +
+                        '<p>' + 'Humidity: ' + data.list[i].main.humidity + '%</p>' +
+                        '<p>' + 'Wind Speed: ' + data.list[i].wind.speed + ' MPH</p>' +
+                        '<p>' + 'Temp: ' + data.list[i].main.temp + '°</p>' +
+                        '<p>' + 'Low: ' + data.list[i].main.temp_min + '°</p>' +
+                        '<p>' + 'High: ' + data.list[i].main.temp_max + '°</p></div>'
+                }
+            }
+            $('#forecastDays').append(forecastDays)
+        } else {
+            $('#forecastDays').replaceWith('<div class="row" id="forecastDays"></div>')
+                forecastDays = ''
+            for (var j = 0; j < data.list.length; j++) {
+                if (data.list[j].dt_txt.includes('12:00:00')) {
+                    forecastDays += '<div class="col" ><img src="http://openweathermap.org/img/w/' + data.list[j].weather[0].icon + '.png" alt="weatherIMG"><p>' + data.list[j].weather[0].description + '</p>' +
+                        '<p>' + 'Humidity: ' + data.list[j].main.humidity + '%</p>' +
+                        '<p>' + 'Wind Speed: ' + data.list[j].wind.speed + ' MPH</p>' +
+                        '<p>' + 'Temp: ' + data.list[j].main.temp + '°</p>' +
+                        '<p>' + 'Low: ' + data.list[j].main.temp_min + '°</p>' +
+                        '<p>' + 'High: ' + data.list[j].main.temp_max + '°</p></div>'
+                }
+            }
+            console.log(forecastDays)
+            $('#forecastDays').append(forecastDays)
+        }
+    }
+
+    //default API()
+    $.get("http://api.openweathermap.org/data/2.5/forecast", {
+        APPID: OPEN_WEATHER_APPID,
+        lat: latitude,
+        lon: longitude,
+        units: "imperial"
+    }).done(function (data) {
+        $('#location').html(data.city['name'])
+        renderForecast(data)
+    });
+
+    function onDragEnd() {
+        var lngLat = marker.getLngLat();
+        coordinates.style.display = 'block';
+        coordinates.innerHTML =
+            'Longitude: ' + lngLat.lng + '<br />Latitude: ' + lngLat.lat;
+        longitude = lngLat.lng;
+        latitude = lngLat.lat;
+
+        $.get("http://api.openweathermap.org/data/2.5/forecast", {
+            APPID: OPEN_WEATHER_APPID,
+            lat: latitude,
+            lon: longitude,
+            units: "imperial"
+        }).done(function (data) {
+            $('#location').html(data.city['name'])
+            renderForecast(data)
+        });
+    }
+    marker.on('dragend', onDragEnd);
+    //how to target new marker ==> geocoder.mapMarker._lngLat
+
 </script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
         integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
