--- a/ajax-blog.html
+++ b/ajax-blog.html
@@ -11,13 +11,36 @@
 </head>
 <body>
 
+<div id="posts"></div>
+<button id="refresh" type="button">Refresh</button>
 
-<script src="https://code.jquery.com/jquery-2.2.4.min.js"
-        integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+<script src="js/jquery.js"></script>
+
 <!--custom script-->
 <script>
+    $(document).ready(function () {
+        "use strict"
 
+        function getPosts() {
+            $.ajax("data/blog.json").done(function (data) {
+                var innerHTML = '';
+                data.forEach(function (object) {
+                    innerHTML += '<div class="card"><h3>' + object['title'] + '</h3><p>'
+                        + object['content'] + '</p><p>'
+                        + object['categories'] + '</p><p>'
+                        + object['date'] + '</p></div>'
+                    $('#posts').html(innerHTML);
+                })
+            })
+        }
+        getPosts()
+
+        $('#refresh').click(function () {
+            getPosts()
+        })
+    });
 </script>
+
 
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
         integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
@@ -25,5 +48,6 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
         crossorigin="anonymous"></script>
+
 </body>
 </html>
