--- a/ajax-store.html
+++ b/ajax-store.html
@@ -77,6 +77,7 @@
         "use strict";
         function getInventory() {
             $.ajax("data/inventory.json").done(function (data) {
+                console.log(data)
                 var innerHTML = '<br>';
                 data.forEach(function (object) {
                     innerHTML += '<tr><td>' + object['title'] + '</td><td>'
